--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,4 @@
-$color1: red;
+$color1: rgb(114, 77, 12);
 $color2: #fff4ef;
 $color3: yellow;
 $color4: #cd8c00;
@@ -40,7 +40,7 @@ $anim-duration: 0.3s;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     transition: background-color $anim-duration ease-in-out, color $anim-duration ease-in-out, border-color $anim-duration ease-in-out;
     /* debug */
-    /* outline: 2px dashed red; */
+    // outline: 2px dashed red;
 }
 
 
@@ -118,21 +118,63 @@ nav.desktop {
 }
 
 #content {
-    @extend %center-column;
-    justify-content: space-between;
+    align-self: center;
+    justify-self: center;
 
-    height: 70%;
-    margin: 2rem 0;
+    &.front {
+        @extend %center-column;
+        justify-content: space-between;
+        gap: 20px;
+        height: 70%;
+        margin: 2rem 0;
+    
+        /*for readability*/
+        max-width: 700px; 
+    }
 
-    /*for readability*/
-    max-width: 700px; 
+    &.menu {
+        @extend %center-column;
+        // height: 100%;
+        // flex-wrap: wrap;
+        // :nth-child(1) {
+        //     flex-direction: row;
+        // }
+
+        > :nth-child(2){
+            flex-direction: row-reverse;
+        }
+    }
 
     section {
         @extend %center-column;
     }
 
-    article {
+    .food {
+        @extend %center-row;
+        justify-content: space-evenly;
+        background-color: rgba($color1, 0.9);
+        padding: 30px;
+        width: 80%;
+        max-width: 1000px;
+        margin: 10px;
+        border-radius: 20px;
+        
+        article {
+            @extend %center-column;
+            flex-wrap: nowrap;
+            gap: 10px;
+        }
+        img {
+            width: 10rem;
+            height: 10rem;
+            flex-shrink: 0;
+            border-radius: 10px;
+            margin: 0 20px;
+        }
 
+        p {
+            text-align: center;
+        }
     }
 }
 
